Add command and query interfaces, exception handling, and validation behaviors

--- a/PasswordManager.Shared/PasswordManager.Shared.csproj
+++ b/PasswordManager.Shared/PasswordManager.Shared.csproj
@@ -7,6 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="12.4.1" />
+        <PackageReference Include="FluentValidation" Version="11.11.0" />
+    </ItemGroup>
+
+    <ItemGroup>
       <Folder Include="Common\Request\" />
       <Folder Include="Common\Response\" />
       <Folder Include="Common\Result\" />
