--- a/PasswordManager.Application/PasswordManager.Application.csproj
+++ b/PasswordManager.Application/PasswordManager.Application.csproj
@@ -6,4 +6,11 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="MediatR" Version="12.4.1" />
+        <PackageReference Include="FluentValidation" Version="11.11.0" />
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.11" />
+    </ItemGroup>
+
 </Project>
