Add dependency injection, clipboard, and dialog services; implement login and registration view model

--- a/PasswordManager.Application/PasswordManager.Application.csproj
+++ b/PasswordManager.Application/PasswordManager.Application.csproj
@@ -13,4 +13,9 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.11" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\PasswordManager.Domain\PasswordManager.Domain.csproj" />
+      <ProjectReference Include="..\PasswordManager.Shared\PasswordManager.Shared.csproj" />
+    </ItemGroup>
+
 </Project>
