--- a/PasswordManager.Desktop/PasswordManager.Desktop.csproj
+++ b/PasswordManager.Desktop/PasswordManager.Desktop.csproj
@@ -8,4 +8,31 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.11" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.11" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.11" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.11" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.11" />
+      <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
+      <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\PasswordManager.Domain\PasswordManager.Domain.csproj" />
+      <ProjectReference Include="..\PasswordManager.Infrastructure\PasswordManager.Infrastructure.csproj" />
+      <ProjectReference Include="..\PasswordManager.Shared\PasswordManager.Shared.csproj" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <!-- Copy appsettings.json to output -->
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+    
+    <ItemGroup>
+      <Folder Include="Views\" />
+    </ItemGroup>
 </Project>
