--- a/PasswordManager.Infrastructure/PasswordManager.Infrastructure.csproj
+++ b/PasswordManager.Infrastructure/PasswordManager.Infrastructure.csproj
@@ -21,6 +21,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\PasswordManager.Domain\PasswordManager.Domain.csproj" />
+      <ProjectReference Include="..\PasswordManager.Shared\PasswordManager.Shared.csproj" />
     </ItemGroup>
 
 </Project>
