--- a/PasswordManager.Desktop/PasswordManager.Desktop.csproj
+++ b/PasswordManager.Desktop/PasswordManager.Desktop.csproj
@@ -10,10 +10,11 @@
 
     <ItemGroup>
       <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+      <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="2.0.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.11" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.11" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.11" />
-    <PackageReference Include="MediatR" Version="12.4.1" />
+      <PackageReference Include="MediatR" Version="12.4.1" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.11" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.11" />
       <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
