--- a/PasswordManager.Desktop/PasswordManager.Desktop.csproj
+++ b/PasswordManager.Desktop/PasswordManager.Desktop.csproj
@@ -20,6 +20,7 @@
       <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
       <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+      <PackageReference Include="System.Windows.Extensions" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
